<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_stats">

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.example.foosball.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_person"
        android:name="com.example.foosball.ui.person.PersonFragment"
        android:label="@string/title_person"
        tools:layout="@layout/fragment_person" />

    <fragment
        android:id="@+id/navigation_edit"
        android:name="com.example.foosball.ui.edit.EditFragment"
        android:label="@string/title_edit"
        tools:layout="@layout/fragment_edit" />
</navigation>